--- a/talks.org
+++ b/talks.org
@@ -10,8 +10,8 @@
 #+STYLE:     <link rel="stylesheet" href="org.css" type="text/css" />
 
 #+BEGIN_HTML
-<div id="top"><p><em>Org mode is for keeping notes, maintaining TODO lists, doing project
-planning, and authoring with a fast and effective plain-text system.</em></p></div>
+<div id="top"><p><em>Org mode is for keeping notes, maintaining TODO lists, planning
+projects, and authoring documents with a fast and effective plain-text system.</em></p></div>
 #+END_HTML
 
 * GoogleTech Talk by Carsten Dominik (2008)
