--- a/index.org
+++ b/index.org
@@ -25,7 +25,7 @@ is maintained by <a href="http://lumiere.ens.fr/~guerry/">Bastien Guerry</a> sin
 #+ATTR_HTML: id="main-image"
 [[file:img/main.jpg]]
 
-Stable version *7.9.3* (jan. 2013) --- [[http://orgmode.org/org-7.9.3a.tar.gz][tar.gz]] or [[http://orgmode.org/org-7.9.3a.zip][zip]]
+Stable version *7.9.3a* (jan. 2013) --- [[http://orgmode.org/org-7.9.3a.tar.gz][tar.gz]] or [[http://orgmode.org/org-7.9.3a.zip][zip]]
 
 Read the [[file:Changes.org][release notes]].
 
