--- a/fr/index.org
+++ b/fr/index.org
@@ -28,7 +28,7 @@ Guerry</a> depuis 2011.</span></em></p></div>
 #+ATTR_HTML: id="main-image"
 [[file:../img/main.jpg]]
 
-Version stable *7.9.3a* (jan. 2013) --- [[http://orgmode.org/org-7.9.3a.tar.gz][tar.gz]] ou [[http://orgmode.org/org-7.9.3a.zip][zip]]
+Version stable *7.9.3b* (jan. 2013) --- [[http://orgmode.org/org-7.9.3b.tar.gz][tar.gz]] ou [[http://orgmode.org/org-7.9.3b.zip][zip]]
 
 Voir les [[file:../Changes.org][derniers changements]] (en).
 
