--- a/index.org
+++ b/index.org
@@ -25,7 +25,7 @@ is maintained by <a href="http://lumiere.ens.fr/~guerry/">Bastien Guerry</a> sin
 #+ATTR_HTML: id="main-image"
 [[file:img/main.jpg]]
 
-Stable version *7.9.3b* (jan. 2013) --- [[http://orgmode.org/org-7.9.3b.tar.gz][tar.gz]] or [[http://orgmode.org/org-7.9.3b.zip][zip]]
+Stable version *7.9.3c* (jan. 2013) --- [[http://orgmode.org/org-7.9.3c.tar.gz][tar.gz]] or [[http://orgmode.org/org-7.9.3c.zip][zip]]
 
 Read the [[file:Changes.org][release notes]].
 
