--- a/ja/index.org
+++ b/ja/index.org
@@ -23,7 +23,7 @@
 #+ATTR_HTML: id="main-image"
 [[file:../img/main.jpg]]
 
-安定版は、バージョン*7.9.3c*です。（2013年01月現在）--- [[http://orgmode.org/org-7.9.3c.tar.gz][tar.gz]] もしくは [[http://orgmode.org/org-7.9.3c.zip][zip]] をダウンロードしてください。
+安定版は、バージョン*7.9.3d*です。（2013年01月現在）--- [[http://orgmode.org/org-7.9.3d.tar.gz][tar.gz]] もしくは [[http://orgmode.org/org-7.9.3d.zip][zip]] をダウンロードしてください。
 
 [[file:../Changes.org][リリースノート（英語）]]を読んでください。
 
@@ -56,7 +56,6 @@
    :END:
 
 {{{next(docs)}}}
-
 * ドキュメントと文献
   :PROPERTIES:
   :CUSTOM_ID: docs
