--- a/fr/index.org
+++ b/fr/index.org
@@ -42,6 +42,8 @@ Dernière version du jour : [[http://orgmode.org/org-latest.tar.gz][tar.gz]] ou 
 
 - [[file:features.org][Liste des fonctionnalités]]
 - [[#docs][Manuels et tutoriels]]
+- [[http://orgmode.org/worg/][Worg: doc communautaire]]
+- [[http://orgmode.org/org.html#History-and-Acknowledgments][Histoire et remerciements]]
 - [[file:talks.org][Présentations vidéo sur Org mode]]
 - [[http://orgmode.org/fr/community.html#gsoc][Google Summer of Code 2012]]
 - [[file:community.org][Liste de discussion et « goodies »]]
