--- a/index.org
+++ b/index.org
@@ -39,6 +39,8 @@ Daily snapshots: [[http://orgmode.org/org-latest.tar.gz][tar.gz]] or [[http://or
 
 - [[file:features.org][List of features]]
 - [[#docs][Manuals and tutorials]]
+- [[http://orgmode.org/worg/][Worg: community-written docs]]
+- [[http://orgmode.org/org.html#History-and-Acknowledgments][History and acknowledgements]]
 - [[file:talks.org][Talks about Org mode]]
 - [[http://orgmode.org/community.html#gsoc][Google Summer of Code 2012]]
 - [[file:community.org][Mailing list and goodies]]
