Move the release note link after the download links.

--- a/fr/index.org
+++ b/fr/index.org
@@ -28,9 +28,7 @@ Guerry</a> depuis 2011.</span></em></p></div>
 #+ATTR_HTML: id="main-image"
 [[file:../img/main.jpg]]
 
-Version stable *7.9.3e* (jan. 2013) --- [[http://orgmode.org/org-7.9.3e.tar.gz][tar.gz]] ou [[http://orgmode.org/org-7.9.3e.zip][zip]]
-
-Voir les [[file:../Changes.org][derniers changements]] (en).
+Version stable *7.9.3e* (jan. 2013) --- [[http://orgmode.org/org-7.9.3e.tar.gz][tar.gz]] ou [[http://orgmode.org/org-7.9.3e.zip][zip]] ([[file:../Changes.org][derniers changements]]).
 
 Version de développement ([[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]]):
 
