--- a/index.org
+++ b/index.org
@@ -25,9 +25,7 @@ is maintained by <a href="http://lumiere.ens.fr/~guerry/">Bastien Guerry</a> sin
 #+ATTR_HTML: id="main-image"
 [[file:img/main.jpg]]
 
-Stable version *7.9.3e* (jan. 2013) --- [[http://orgmode.org/org-7.9.3e.tar.gz][tar.gz]] or [[http://orgmode.org/org-7.9.3e.zip][zip]]
-
-Read the [[file:Changes.org][release notes]].
+Stable version *7.9.3e* (jan. 2013) --- [[http://orgmode.org/org-7.9.3e.tar.gz][tar.gz]] or [[http://orgmode.org/org-7.9.3e.zip][zip]] ([[file:Changes.org][release notes]]).
 
 Development version ([[http://orgmode.org/cgit.cgi/org-mode.git/][cgit]]):
 
