--- a/elpa.org
+++ b/elpa.org
@@ -14,7 +14,7 @@
 projects, and authoring documents with a fast and effective plain-text system.<br />
 
 <span id="top2">It was created by <a href="http://staff.science.uva.nl/~dominik/">Carsten Dominik</a> in 2003 and
-is maintained by <a href="http://lumiere.ens.fr/~guerry/">Bastien Guerry</a> since 2011, with contributions from <a href="http://orgmode.org/org.html#History-and-Acknowledgments">hundreds</a> of users.</span></em></p></div>
+is maintained by <a href="http://lumiere.ens.fr/~guerry/">Bastien Guerry</a> since 2011, with help from <a href="http://orgmode.org/org.html#History-and-Acknowledgments">thousands</a> of users.</span></em></p></div>
 #+END_HTML
 
 * Org Emacs lisp Package Archive
