--- a/fr/index.org
+++ b/fr/index.org
@@ -40,6 +40,7 @@ Dernière version du jour : [[http://orgmode.org/org-latest.tar.gz][tar.gz]] ou 
 
 - [[file:features.org][Liste des fonctionnalités]]
 - [[#docs][Manuels et tutoriels]]
+- [[http://orgmode.org/worg/org-tools/index.html][Outils pour Org (en dehors d'Emacs)]]
 - [[http://orgmode.org/worg/][Worg: doc communautaire]]
 - [[http://orgmode.org/org.html#History-and-Acknowledgments][Histoire et remerciements]]
 - [[file:talks.org][Présentations vidéo sur Org mode]]
